[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Level_1_Sprites/Enemies/shooter/enemySpikey_1.png" type="Texture" id=1]
[ext_resource path="res://Audio/Level_1_Sounds/prototyping_sounds/Plink-sounds-headshot-or-armor-break-20220331-163453.wav" type="AudioStream" id=2]
[ext_resource path="res://Scripts/Level_1_Scripts/shooter.gd" type="Script" id=3]
[ext_resource path="res://Prefabs/Level_1_Prefabs/Enemies/enemy_bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/Level_1_Sounds/SoundForFinalGame/EnemyShooterType/GunEffect/Enemy Gun Effect.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0125

[sub_resource type="CircleShape2D" id=2]
radius = 40.0125

[node name="shooter_type" type="Node2D"]
script = ExtResource( 3 )
bullet_scene = ExtResource( 4 )
bullet_spawn_x = 20
bullet_spawn_y = 0

[node name="shooter" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="shooter"]
position = Vector2( 1.90735e-06, -1.90735e-06 )
scale = Vector2( 2.53125, 2.53125 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="shooter"]
position = Vector2( 0, 11 )
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="death" type="Timer" parent="shooter"]

[node name="Area2D" type="Area2D" parent="shooter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="shooter/Area2D"]
position = Vector2( 0, 11 )
shape = SubResource( 2 )
one_way_collision = true
one_way_collision_margin = 0.0

[node name="death_sound" type="AudioStreamPlayer2D" parent="shooter"]
stream = ExtResource( 2 )
volume_db = 10.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="shooter"]
position = Vector2( -3.8147e-06, -7.62939e-06 )
scale = Vector2( 39, 5.1 )

[node name="shoot_ready" type="Timer" parent="shooter"]
one_shot = true

[node name="shoot_sound" type="AudioStreamPlayer2D" parent="shooter"]
stream = ExtResource( 5 )
volume_db = -5.0
pitch_scale = 0.9
attenuation = 3.86374

[connection signal="timeout" from="shooter/death" to="." method="_on_death_timeout"]
[connection signal="body_entered" from="shooter/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_entered" from="shooter/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="shooter/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="shooter/shoot_ready" to="." method="_on_shoot_ready_timeout"]
